tests/ui/error-codes/E0642.stderr
error[E0642]: parameters can't have complex patterns in associated functions in traits in Rust 2015
  --> $DIR/E0642.rs:11:12
   |
LL |     fn foo((x, y): (i32, i32));
   |            ^^^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL -     fn foo((x, y): (i32, i32));
LL +     fn foo(_: (i32, i32));
   |

error[E0642]: parameters can't have complex patterns in associated functions in traits in Rust 2015
  --> $DIR/E0642.rs:13:12
   |
LL |     fn bar((x, y): (i32, i32)) {}
   |            ^^^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL -     fn bar((x, y): (i32, i32)) {}
LL +     fn bar(_: (i32, i32)) {}
   |

error[E0642]: parameters can't have complex patterns in associated functions in traits in Rust 2015
  --> $DIR/E0642.rs:15:15
   |
LL |     fn method(S { .. }: S) {}
   |               ^^^^^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL -     fn method(S { .. }: S) {}
LL +     fn method(_: S) {}
   |

error[E0642]: parameters can't have complex patterns in associated functions in traits in Rust 2015
  --> $DIR/E0642.rs:17:10
   |
LL |     fn f(&ident: &S) {}
   |          ^^^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL -     fn f(&ident: &S) {}
LL +     fn f(_: &S) {}
   |

error[E0642]: parameters can't have complex patterns in associated functions in traits in Rust 2015
  --> $DIR/E0642.rs:19:10
   |
LL |     fn g(&&ident: &&S) {}
   |          ^^^^^^^
   |
help: give this parameter a name or use an underscore to ignore it
   |
LL -     fn g(&&ident: &&S) {}
LL +     fn g(_: &&S) {}
   |

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0642`.
